# systogony-automation

./: .gitignore  LICENSE  README-systogony.md  README.md  pyproject.toml  systogony.py
ansible/: alpine.yml  ansible.cfg  bootstrap.yml  inventory  main.yml
ansible-systogony/: ansible.cfg  bootstrap.yml  inventory  main.yml
ansible-systogony/filter_plugins/: main.py
ansible-systogony/roles/base/auto-updates/defaults/: main.yml
ansible-systogony/roles/base/auto-updates/tasks/: main.yml
ansible-systogony/roles/base/firewalld/tasks/: disable.yml  remove.yml
ansible-systogony/roles/base/hostname/tasks/: main.yml
ansible-systogony/roles/base/locale/defaults/: main.yml
ansible-systogony/roles/base/locale/tasks/: main.yml
ansible-systogony/roles/base/main/tasks/: main.yml
blueprints/demo/: hosts.yaml  networks.yaml  services.yaml
services.d/: audiobookshelf.yaml  caddy.yaml  container_registry.yaml  dnsmasq.yaml  grafana.yaml  home_assistant.yaml  mosquitto.yaml  netdata.yaml  prometheus.yaml  radicale.yaml  router.yaml  router_client.yaml  ssh.yaml  syncthing.yaml  syncthing_peer.yaml  vikunja.yaml
systogony/: __init__.py  __main__.py  config.py  exceptions.py
systogony/api/: __init__.py  ansible.py  api.py  introspection.py  terraform.py
systogony/cli/: ansible.py  cli.py  main.py  print.py  terraform.py  tests.py
systogony/environment/: __init__.py  blueprint.py  environment.py  query.py
systogony/resource/: __init__.py  acl.py  host.py  interface.py  network.py  resource.py  service.py  service_instance.py
(+314 files in other folders)
